--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,10 +1,8 @@
-@misc{kaddour2021graph,
+@inproceedings{kaddour2021graph,
       title={Graph Intervention Networks for Causal Effect Estimation}, 
       author={Jean Kaddour and Qi Liu and Yuchen Zhu and Matt J. Kusner and Ricardo Silva},
+      booktitle = {Advances in Neural Information Processing Systems},
       year={2021},
-      eprint={2106.01939},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG},
       selected={true},
       pdf = {https://arxiv.org/pdf/2106.01939.pdf},
       code={https://github.com/JeanKaddour/GIN}
