--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,21 +1,24 @@
 @inproceedings{kaddour2021graph,
       title={Graph Intervention Networks for Causal Effect Estimation}, 
-      author={Jean Kaddour and Qi Liu and Yuchen Zhu and Matt J. Kusner and Ricardo Silva},
-      booktitle = {Advances in Neural Information Processing Systems},
+      author={Jean Kaddour and Yuchen Zhu and Qi Liu and Matt J. Kusner and Ricardo Silva},
+      booktitle = {NeurIPS},
       year={2021},
       selected={true},
       pdf = {https://arxiv.org/pdf/2106.01939.pdf},
-      code={https://github.com/JeanKaddour/GIN}
+      code={https://github.com/JeanKaddour/GIN},
+      publisher = {Curran Associates, Inc.},
+      volume = {35},
+      editor = {H. Larochelle and M. Ranzato and R. Hadsell and M. F. Balcan and H. Lin}
 }
 @inproceedings{paml,
   author={Kaddour, Jean and Sæmundsson, Steindór and Deisenroth, Marc},
-  booktitle = {Advances in Neural Information Processing Systems},
+  booktitle = {NeurIPS},
   editor = {H. Larochelle and M. Ranzato and R. Hadsell and M. F. Balcan and H. Lin},
   pages = {20813--20822},
   publisher = {Curran Associates, Inc.},
   title = {Probabilistic Active Meta-Learning},
   pdf = {https://proceedings.neurips.cc/paper/2020/file/ef0d17b3bdb4ee2aa741ba28c7255c53-Paper.pdf},
-  volume = {33},
+  volume = {34},
   year = {2020},
   selected={true},
   code= {https://github.com/JeanKaddour/PAML},
