--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,12 @@
 @inproceedings{kaddour2021graph,
-      title={Graph Intervention Networks for Causal Effect Estimation}, 
+      title={Causal Effect Inference for Structured Treatments}, 
       author={Jean Kaddour and Yuchen Zhu and Qi Liu and Matt J. Kusner and Ricardo Silva},
       booktitle = {NeurIPS},
       year={2021},
       selected={true},
       pdf = {https://arxiv.org/pdf/2106.01939.pdf},
       code={https://github.com/JeanKaddour/GIN},
+      video={https://www.youtube.com/watch?v=lnVDe1TbkbQ},
       publisher = {Curran Associates, Inc.},
       volume = {35},
       editor = {H. Larochelle and M. Ranzato and R. Hadsell and M. F. Balcan and H. Lin}
