--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,8 @@
       video={https://www.youtube.com/watch?v=lnVDe1TbkbQ},
       publisher = {Curran Associates, Inc.},
       volume = {35},
-      editor = {H. Larochelle and M. Ranzato and R. Hadsell and M. F. Balcan and H. Lin}
+      editor = {H. Larochelle and M. Ranzato and R. Hadsell and M. F. Balcan and H. Lin},
+      poster={sin_poster.pdf}
 }
 @inproceedings{paml,
   author={Kaddour, Jean and Sæmundsson, Steindór and Deisenroth, Marc},
@@ -24,7 +25,7 @@
   selected={true},
   code= {https://github.com/JeanKaddour/PAML},
   video={https://www.youtube.com/watch?v=ipN-bK6Od3U},
-  poster={https://github.com/JeanKaddour/PAML/raw/main/poster.pdf}
+  poster={paml_poster.pdf}
 }
 
 
