Add WASAM paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,4 +28,11 @@
   poster={paml_poster.pdf}
 }
 
-
+@article{kaddour2022questions,
+  title={Questions for Flat-Minima Optimization of Modern Neural Networks},
+  author={Kaddour, Jean and Liu, Linqing and Silva, Ricardo and Kusner, Matt J},
+  journal={arXiv preprint arXiv:2202.00661},
+  year={2022},
+  selected={true},
+  code={https://github.com/JeanKaddour/WASAM}
+}
