--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,13 @@
+@article{kaddour2022questions,
+  title={Questions for Flat-Minima Optimization of Modern Neural Networks},
+  author={Jean Kaddour and Linqing Liu and Ricardo Silva and Matt J. Kusner},
+  journal={arXiv preprint arXiv:2202.00661},
+  year={2022},
+  selected={true},
+  code={https://github.com/JeanKaddour/WASAM},
+  pdf={https://arxiv.org/pdf/2202.00661.pdf}
+}
+
 @inproceedings{kaddour2021graph,
       title={Causal Effect Inference for Structured Treatments}, 
       author={Jean Kaddour and Yuchen Zhu and Qi Liu and Matt J. Kusner and Ricardo Silva},
@@ -27,13 +37,4 @@
   code= {https://github.com/JeanKaddour/PAML},
   video={https://www.youtube.com/watch?v=ipN-bK6Od3U},
   poster={paml_poster.pdf}
-}
-
-@article{kaddour2022questions,
-  title={Questions for Flat-Minima Optimization of Modern Neural Networks},
-  author={Kaddour, Jean and Liu, Linqing and Silva, Ricardo and Kusner, Matt J},
-  journal={arXiv preprint arXiv:2202.00661},
-  year={2022},
-  selected={true},
-  code={https://github.com/JeanKaddour/WASAM}
 }
