Add Daguerro paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,13 @@
+@inproceedings{
+zantedeschi2022dag,
+title={{DAG} Learning on the Permutahedron},
+author={Valentina Zantedeschi and Jean Kaddour and Luca Franceschi and Matt Kusner and Vlad Niculae},
+booktitle={ICLR2022 Workshop on the Elements of Reasoning: Objects, Structure and Causality},
+year={2022},
+selected={true},
+url={https://openreview.net/forum?id=S8X8vS_85gc}
+}
+
 @article{kaddour2022questions,
   title={Questions for Flat-Minima Optimization of Modern Neural Networks},
   author={Jean Kaddour and Linqing Liu and Ricardo Silva and Matt J. Kusner},
