Add link to Daguerro paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@ author={Valentina Zantedeschi and Jean Kaddour and Luca Franceschi and Matt Kusn
 booktitle={ICLR2022 Workshop on the Elements of Reasoning: Objects, Structure and Causality},
 year={2022},
 selected={true},
-url={https://openreview.net/forum?id=S8X8vS_85gc}
+pdf={https://openreview.net/pdf?id=S8X8vS_85gc}
 }
 
 @article{kaddour2022questions,
