--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,17 @@
+@misc{kaddour2022causal,
+    title={Causal Machine Learning: A Survey and Open Problems},
+    author={Jean Kaddour and Aengus Lynch and Qi Liu and Matt J. Kusner and Ricardo Silva},
+    year={2022},
+    eprint={2206.15475},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG},
+    selected={true},
+    pdf={https://arxiv.org/pdf/2206.15475.pdf},
+    website={https://www.causal-machine-learning.com/}
+
+
+}
+
 @inproceedings{
 zantedeschi2022dag,
 title={{DAG} Learning on the Permutahedron},
@@ -9,7 +23,7 @@ pdf={https://openreview.net/pdf?id=S8X8vS_85gc}
 }
 
 @article{kaddour2022questions,
-  title={Questions for Flat-Minima Optimization of Modern Neural Networks},
+  title = {A Fair Comparison of Two Popular Flat Minima Optimizers: Stochastic Weight Averaging vs. Sharpness-Aware Minimization},
   author={Jean Kaddour and Linqing Liu and Ricardo Silva and Matt J. Kusner},
   journal={arXiv preprint arXiv:2202.00661},
   year={2022},
@@ -19,7 +33,7 @@ pdf={https://openreview.net/pdf?id=S8X8vS_85gc}
 }
 
 @inproceedings{kaddour2021graph,
-      title={Causal Effect Inference for Structured Treatments}, 
+      title={Causal Effect Inference for Structured Treatments},
       author={Jean Kaddour and Yuchen Zhu and Qi Liu and Matt J. Kusner and Ricardo Silva},
       booktitle = {NeurIPS},
       year={2021},
