--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,22 +1,5 @@
 
 
-@misc{kaddourChallengesApplicationsLarge2023,
-	title = {Challenges and {Applications} of {Large} {Language} {Models}},
-	url = {http://arxiv.org/abs/2307.10169},
-	doi = {10.48550/arXiv.2307.10169},
-	abstract = {Large Language Models (LLMs) went from non-existent to ubiquitous in the machine learning discourse within a few years. Due to the fast pace of the field, it is difficult to identify the remaining challenges and already fruitful application areas. In this paper, we aim to establish a systematic set of open problems and application successes so that ML researchers can comprehend the field's current state more quickly and become productive.},
-	urldate = {2023-08-07},
-	publisher = {arXiv},
-	author = {Kaddour, Jean and Harris, Joshua and Mozes, Maximilian and Bradley, Herbie and Raileanu, Roberta and McHardy, Robert},
-	month = jul,
-	year = {2023},
-	note = {arXiv:2307.10169 [cs]},
-  pdf={https://arxiv.org/pdf/2307.10169.pdf},
-  selected={true},
-}
-
-
-
 
 @inproceedings{kaddourNoTrainNo2023a,
 	title = {No {Train} {No} {Gain}: {Revisiting} {Efficient} {Training} {Algorithms} {For} {Transformer}-based {Language} {Models}},
@@ -35,6 +18,40 @@
   booktitle={Advances in Neural Information Processing Systems},
 editor={Alice H. Oh and Alekh Agarwal and Danielle Belgrave and Kyunghyun Cho},
 }
+
+
+
+@inproceedings{wangEvaluatingSelfSupervisedLearning2023,
+	title = {Evaluating {Self}-{Supervised} {Learning} for {Molecular} {Graph} {Embeddings}},
+	url = {http://arxiv.org/abs/2206.08005},
+	abstract = {Graph Self-Supervised Learning (GSSL) provides a robust pathway for acquiring embeddings without expert labelling, a capability that carries profound implications for molecular graphs due to the staggering number of potential molecules and the high cost of obtaining labels. However, GSSL methods are designed not for optimisation within a specific domain but rather for transferability across a variety of downstream tasks. This broad applicability complicates their evaluation. Addressing this challenge, we present 'Molecular Graph Representation Evaluation' (MOLGRAPHEVAL), generating detailed profiles of molecular graph embeddings with interpretable and diversified attributes. MOLGRAPHEVAL offers a suite of probing tasks grouped into three categories: (i) generic graph, (ii) molecular substructure, and (iii) embedding space properties. By leveraging MOLGRAPHEVAL to benchmark existing GSSL methods against both current downstream datasets and our suite of tasks, we uncover significant inconsistencies between inferences drawn solely from existing datasets and those derived from more nuanced probing. These findings suggest that current evaluation methodologies fail to capture the entirety of the landscape.},
+	urldate = {2023-09-22},
+	author = {Wang, Hanchen and Kaddour, Jean and Liu, Shengchao and Tang, Jian and Lasenby, Joan and Liu, Qi},
+	month = jul,
+  code={https://github.com/hansen7/MolGraphEval},
+	year = {2023},
+  booktitle={Advances in Neural Information Processing Systems},
+    selected={true},
+
+}
+
+
+
+@misc{kaddourChallengesApplicationsLarge2023,
+	title = {Challenges and {Applications} of {Large} {Language} {Models}},
+	url = {http://arxiv.org/abs/2307.10169},
+	doi = {10.48550/arXiv.2307.10169},
+	abstract = {Large Language Models (LLMs) went from non-existent to ubiquitous in the machine learning discourse within a few years. Due to the fast pace of the field, it is difficult to identify the remaining challenges and already fruitful application areas. In this paper, we aim to establish a systematic set of open problems and application successes so that ML researchers can comprehend the field's current state more quickly and become productive.},
+	urldate = {2023-08-07},
+	publisher = {arXiv},
+	author = {Kaddour, Jean and Harris, Joshua and Mozes, Maximilian and Bradley, Herbie and Raileanu, Roberta and McHardy, Robert},
+	month = jul,
+	year = {2023},
+	note = {arXiv:2307.10169 [cs]},
+  pdf={https://arxiv.org/pdf/2307.10169.pdf},
+  selected={true},
+}
+
 
 
 @article{lynch2023spawrious,
