--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,6 +32,7 @@ editor={Alice H. Oh and Alekh Agarwal and Danielle Belgrave and Kyunghyun Cho},
 	year = {2023},
   booktitle={Advances in Neural Information Processing Systems},
     selected={true},
+  pdf={https://arxiv.org/pdf/2206.08005.pdf},
 
 }
 
